2010-07-27 22:26  paddockd

	* [r175] ChangeLog, makefile.linux26-arm-oss: Added a Marvel 6281
	  ARM Makefile for the Synology DS-109. Contributed by Jonas K.

2010-07-26 18:54  paddockd

	* [r174] ChangeLog, makefile.linux24-display,
	  makefile.linux26-display, makefile.linux26-mipsel-oss: Fixed
	  missing PORTAUDIOFILES deletion in clean section of OSS
	  makefiles.

2010-07-21 11:59  paddockd

	* [r173] ChangeLog, makefile.mingw32-asio-display,
	  makefile.mingw32-display, makefile.mingw32-wasapi-display,
	  sources/portaudio-r1500.tar.gz, sources/portaudio-r1528.tar.gz,
	  src/squeezeslave/help.c, src/squeezeslave/squeezeslave.c, tests,
	  tests/patest_sine.c, tests/patest_sine.sh: Renamed
	  -X/--noexclusive option to -S/--shared.
	  Updated windows makefiles to use PADEV r1528 which fixes WASAPI
	  exclusive mode AUDCLNT_E_BUFFER_TOO_LARGE errors. Could limit
	  number of failures of Pa_StartStream to avoid deadlocking in
	  similar situations.
	  Deleted obsolete source portaudio-r1500.tar.gz.
	  Increased version to 173.

2010-07-18 17:22  paddockd

	* [r172] ChangeLog, src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/squeezeslave.c: Display latency low/high in
	  device list using same scale as -y/--latency option.
	  Increased version to 172.

2010-07-18 13:11  paddockd

	* [r171] ChangeLog, makefile.linux26-alsa-display,
	  makefile.linux26-i64-alsa-display,
	  makefile.linux26-ppc-alsa-display, makefile.osxintel-display,
	  makefile.osxppc-display, src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/help.c, src/squeezeslave/squeezeslave.c,
	  src/squeezeslave/squeezeslave.h: Added -y/--latency option.
	  Fixed default device identification in -L option.
	  Updated remaining makefiles to use PADEV r1526
	  Increased version to 171.

2010-07-17 20:29  paddockd

	* [r170] ChangeLog, TODO, src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/help.c, src/squeezeslave/squeezeslave.c: Added